--- a/assets/sass/pages/home.scss
+++ b/assets/sass/pages/home.scss
@@ -570,3 +570,57 @@
     transform: rotate(180deg);
   }
 }
+
+//合作伙伴，社区logo样式
+.partern-logo-ul{
+    width: 89%; 
+    margin:0 auto;
+    display: flex;
+    justify-content: center;
+    padding-left:0;
+
+    span{
+        display:inline-block; 
+        margin:0 auto; 
+        overflow: hidden;
+        display:flex;
+        flex-wrap: wrap;
+    }
+}
+
+.partern-logo-li, .community-logo-li{
+    white-space: nowrap;
+    float: left;
+    width:140px;
+    height: 100px; 
+    list-style: none; 
+    display: flex; 
+    align-items:center; 
+    justify-content: center;
+    margin: 5px auto;
+
+    img{
+        height: auto;
+        width: 130px;
+    }
+}
+
+.community-logo-li{
+    width:150px;
+}
+
+.partern-logo-li:nth-child(2) img,.partern-logo-li:nth-child(3) img{
+    width: 90px;
+}
+
+.partern-logo-li:nth-child(4) img{
+    width: 150px;
+}
+
+.community-logo-li:nth-child(2) img{
+    width: 160px;
+}
+
+.partern-logo-li:nth-child(7) img{
+    width: 125px;
+}
